feat: version check and bug fix